opam-version: "2.0"
maintainer: [
  "Cedric Cellier <rixed@happyleptic.org>"
  "Francois Berenger <unixjunkie@sdf.org>"
  "Gabriel Scherer <gabriel.scherer@gmail.com>"
  "Thibault Suzanne <thi.suzanne@gmail.com>"
]
authors: "OCaml batteries-included team"
homepage: "http://batteries.forge.ocamlcore.org/"
bug-reports: "https://github.com/ocaml-batteries-team/batteries-included/issues"
dev-repo: "git://github.com/ocaml-batteries-team/batteries-included.git"
license: "LGPL-2.1-or-later with OCaml-LGPL-linking-exception"
doc: "http://ocaml-batteries-team.github.io/batteries-included/hdoc2/"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.00.0" & < "4.12.0"}
  "qtest" {with-test & >= "2.5"}
  "qcheck" {with-test & >= "0.6" & < "0.14"}
  "dune" {>= "1.0"}
]
#url {
#  src: "https://github.com/ocaml-batteries-team/batteries-included/releases/download/vXXX/batteries-XXX.tar.gz"
#  checksum: "md5=XXX"
#}
