
(executable
  (name prefilter)
  (modules prefilter)
  (libraries str)
  (modes byte))

(library
  (name batList)
  (public_name batList)
;;  (preprocessor_deps prefilter)
  (preprocess
    (action
      (system "./prefilter.bc %{input-file}")))
  (modules batList batEnum batInterfaces batInnerIO batConcurrent
  batOrd batInnerWeaktbl batBytesCompat batRef batSet batSeq batInnerShuffle
  batPrintf batBuffer batString batInt batNumber batInt32 batInt64 batNativeint
  batIO batUnix batFloat batChar))
